# automatic-beer-goggles

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
.github/: copilot-instructions.md
.github/workflows/: pages.yml
automatic_beer_goggles/: __init__.py  cli.py
automatic_beer_goggles/audio/: mastering.py
automatic_beer_goggles/config/: platforms.py
automatic_beer_goggles/orchestration/: workflow.py
automatic_beer_goggles/utils/: file_utils.py
automatic_beer_goggles/video/: generation.py
docs/: README.md  _config.yml  index.html
examples/: basic_workflow.py  batch_processing.py  config.toml
