[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic-beer-goggles"
version = "0.1.0"
description = "Automated mastered audio-image video creation for social media platforms"
authors = [{name = "DRKV8R"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "python-ffmpeg>=2.0.0",
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
beer-goggles = "automatic_beer_goggles.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["automatic_beer_goggles*"]